--- a/src/app.css
+++ b/src/app.css
@@ -2,3 +2,10 @@
     background-color: grey;
     text-align: center;
 }
+.job-item{
+    border: 2px solid black;
+    border-radius: 5px;
+    width: 80vw;
+    margin: 8px;
+    margin-inline: auto;
+}
